<resources>
    <string name="app_name">gift_vouchers</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="let_s_login">Let\'s Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="explore">Explore</string>
    <string name="e_mail">E-mail</string>
    <string name="commercial_reg">Commercial Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="loading_c">Loading...</string>
    <string name="get_voucher">Get Voucher</string>
    <string name="gift_details">Gift Details</string>
    <string name="gold">Gold</string>
    <string name="silver">Silver</string>
    <string name="platinum">platinum</string>
    <string name="type">Type</string>
    <string name="selected_price">Selected Price</string>
    <string name="next">Next</string>
    <string name="select_a_design_for_nyour_gift">Select a Design For\nYour Gift</string>
    <string name="get_gift">Get Gift</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="cart">Cart</string>
    <string name="my_gift_voutcher_s_details">My Gift Voutcher\'s Details</string>
    <string name="my_gift_voutcher_s_card_details">My Gift Voutcher\'s Card Details</string>
    <string name="check_out">Check Out</string>
    <string name="checkout">Checkout</string>
    <string name="reciever_info">Reciever Info</string>
    <string name="full_name">Full name</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="pick_a_date">pick a date</string>
    <string name="day">day</string>
    <string name="month">month</string>
    <string name="year">Year</string>
    <string name="write_a_congratulatory_message_if_you_want">Write a congratulatory message if you want</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="visa_card">Visa Card</string>
    <string name="apple_pay">Paypal</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="card_verification_code">Card Verification Code</string>
    <string name="code">code</string>
    <string name="confirm">Confirm</string>
    <string name="great_your_gift_has_been_sent">Great, Your Gift Has Been Sent</string>
    <string name="my_order_s">My Order\'s</string>
    <string name="reset_password">Reset Password</string>
    <string name="verify_your_email">Verify your email</string>
    <string name="resend_code"><u>Resend Code</u></string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="logout">Logout</string>
    <string name="orders">Orders</string>
    <string name="settings">Settings</string>
    <string name="Choose_type">Choose Type</string>
    <string name="user">User</string>
    <string name="company">Company</string>
    <string name="about_app">About App</string>
    <string name="about_gift_voucher">About Gift Voucher</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="faq">FAQ</string>
    <string name="contact">Contact</string>
    <string name="contactus">Contact Us</string>
    <string name="write_a_suggestion">Write a suggestion</string>
    <string name="send">Send</string>
    <string name="contact_details">Contact Details</string>
    <string name="my_orders">My Orders</string>
    <string name="user_info">User Info</string>
    <string name="country">Country</string>
    <string name="change_password"><u>Change Password</u></string>
    <string name="old_pass">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="details">Details</string>
    <string name="order_details_s">Order Details\'s</string>
    <string name="let_s_manage_your_gift_s_voucher_s">Let\'s Manage your Gift\'s Voucher\'s</string>
    <string name="logged_in_successfully">Logged In Successfully...</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="reciever_email">Reciever Email</string>
    <string name="voucher_s_price">Voucher\'s Price:</string>
    <string name="enter_price_val">Please enter the price</string>
    <string name="pay_gifts">Pay for Gift Vouchers</string>
    <string name="price_company">Price</string>
    <string name="sar">SAR</string>
    <string name="skip"><u>Skip</u></string>
    <string name="user_val">Username is too short!</string>
    <string name="ver_code_val">Verification Code is too short!</string>
    <string name="email_val">Email is too short!</string>
    <string name="password_val">Password is too short!</string>
    <string name="whatsapp_val">WhatsApp is too short!</string>
    <string name="password_d_match">Password didnt match!</string>
    <string name="phone_val">Phone is too short!</string>
    <string name="address_val">Address is too short!</string>
    <string name="check_type">You must select type!</string>
    <string name="inset_commerical">You must Insert Commercial Register</string>
    <string name="Passord_changed">password changed successfully</string>
    <string name="voucher_from">Gift Voucher From\n</string>
    <string name="about">About</string>
    <string name="delete_item">Delete Item</string>
    <string name="sure">Are you sure you want to delete this item?</string>
    <string name="select_design">Please select design</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="No_Connection">No Connection</string>
    <string name="insert_code">Please inset four digit!</string>
    <string name="price_discount">Price discount :</string>
    <string name="cart_is_empty">Cart is empty</string>
    <string name="please_type_new_password">Please type new password</string>
    <string name="change_password_a">Change Password</string>
    <string name="gift_voucher">Gift Voucher</string>
    <string name="please_login">You must login!</string>
    <string name="login">Login</string>
    <string name="search_for_company">Search for company</string>
    <string name="no_company_found">No Company Found</string>
    <string name="no_orders_found">No Orders Found</string>
    <string name="notes">Notes:</string>
    <string name="forget_password">forget password</string>
    <string name="get_the_most_popular_gift_vouchers">Get the most popular gift Vouchers</string>
    <string name="price_must_be_less_than">Price must be less than 5000</string>
    <string name="add_other_price">add other price</string>
    <string name="all_most_done_please_fill_these_nfileds">All Most Done...Please Fill These\nFileds</string>
    <string name="gift_voucher_s_v1_0_0">Gift Voucher\'s v1.0.0</string>
    <string name="hi">hi,</string>
    <string name="typeaaa">Type:</string>
    <string name="to_complete_your_payment_you_must_press_on_pay_button">To complete your payment you must press on pay button</string>
    <string name="total_amount_20">Total Amount : </string>
    <string name="fill_data">All Most Done...Please Fill These\nFileds</string>
    <string name="price">price</string>
    <string name="language">العربيه</string>


</resources>
