<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main_screen.ui.Checkout.check_out">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_weight=".05"
                    android:paddingLeft="@dimen/_15sdp"
                    android:text="@string/checkout"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:paddingLeft="@dimen/_15sdp"
                    android:text="All Most Done...Please Fill These\nFileds"
                    android:textColor="#E1E1E1"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:paddingLeft="@dimen/_15sdp"
                    android:text="@string/reciever_info"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/fullname"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:background="@android:color/white"
                    android:hint="@string/full_name"
                    android:paddingLeft="@dimen/_7sdp"
                    android:textSize="@dimen/_12sdp" />

                <EditText
                    android:id="@+id/email_address"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:background="@android:color/white"
                    android:hint="@string/e_mail_address"
                    android:paddingLeft="@dimen/_7sdp"
                    android:textSize="@dimen/_12sdp" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:background="@android:color/white"
                    android:hint="@string/phone_number"
                    android:paddingLeft="@dimen/_7sdp"
                    android:textSize="@dimen/_12sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/_20sdp"
                    android:paddingRight="@dimen/_20sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:text="@string/pick_a_date"
                        android:textSize="@dimen/_12sdp" />

                    <EditText
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginLeft="@dimen/_35sdp"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:background="@android:color/white"
                        android:hint="@string/day"
                        android:inputType="number"
                        android:gravity="center"
                        android:textSize="@dimen/_12sdp" />

                    <EditText
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:background="@android:color/white"
                        android:hint="@string/month"
                        android:inputType="number"
                        android:gravity="center"
                        android:textSize="@dimen/_12sdp" />

                    <EditText
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:background="@android:color/white"
                        android:hint="@string/year"
                        android:inputType="number"
                        android:gravity="center"
                        android:textSize="@dimen/_12sdp" />


                </LinearLayout>

                <EditText
                    android:id="@+id/descripition"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:background="@android:color/white"
                    android:gravity="top"
                    android:paddingTop="@dimen/_15sdp"
                    android:hint="@string/write_a_congratulatory_message_if_you_want"
                    android:paddingLeft="@dimen/_7sdp"
                    android:textSize="@dimen/_12sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".5"
                        android:gravity="center|left">

                        <ImageView
                            android:id="@+id/back"
                            android:layout_width="@dimen/_38sdp"
                            android:layout_height="@dimen/_38sdp"
                            android:layout_gravity="center|left"
                            android:layout_marginLeft="@dimen/_20sdp"
                            android:background="@drawable/auth_button_bg"
                            android:padding="@dimen/_9sdp"
                            android:src="@drawable/back_one" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".5"
                        android:gravity="center|right"
                        android:paddingRight="@dimen/_15sdp">

                        <Button
                            android:id="@+id/next"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_marginRight="@dimen/_10sdp"
                            android:background="@drawable/selected_price"
                            android:text="@string/next"
                            android:textColor="@android:color/white"
                            android:textAllCaps="false"
                            android:textSize="@dimen/_12sdp" />


                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </FrameLayout>
</layout>