<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main_screen.ui.pay.pay">


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_weight=".05"
                    android:paddingLeft="@dimen/_15sdp"
                    android:text="@string/checkout"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:paddingLeft="@dimen/_15sdp"
                    android:text="@string/select_payment_method"
                    android:textColor="#E1E1E1"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp">

                    <ImageView
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_50sdp"
                        android:src="@drawable/visa" />

                    <ImageView
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/_55sdp"
                        android:layout_marginRight="@dimen/_50sdp"
                        android:src="@drawable/apple" />

                    <RadioGroup
                        android:id="@+id/radiogroup"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_80sdp"
                        android:layout_marginTop="@dimen/_15sdp">

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_marginRight="@dimen/_10sdp"
                            android:layoutDirection="rtl"
                            android:text="@string/visa_card"
                            android:textSize="@dimen/_18sdp"
                            android:textStyle="bold" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_marginRight="@dimen/_10sdp"
                            android:layoutDirection="rtl"
                            android:text="@string/apple_pay"
                            android:textSize="@dimen/_18sdp"
                            android:textStyle="bold" />

                    </RadioGroup>
                </RelativeLayout>

                <EditText
                    android:id="@+id/card_num"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:inputType="number"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:background="@android:color/white"
                    android:hint="@string/card_number"
                    android:paddingLeft="@dimen/_7sdp"
                    android:textSize="@dimen/_12sdp" />

                <EditText
                    android:id="@+id/holder_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:inputType="number"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:background="@android:color/white"
                    android:hint="Card holder's Name"
                    android:paddingLeft="@dimen/_7sdp"
                    android:textSize="@dimen/_12sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/_20sdp"
                    android:paddingRight="@dimen/_20sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:text="@string/expiry_date"
                        android:textSize="@dimen/_12sdp" />

                    <EditText
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginLeft="@dimen/_35sdp"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:background="@android:color/white"
                        android:hint="@string/month"
                        android:inputType="number"
                        android:gravity="center"
                        android:textSize="@dimen/_12sdp" />

                    <EditText
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:background="@android:color/white"
                        android:hint="@string/year"
                        android:inputType="number"
                        android:gravity="center"
                        android:textSize="@dimen/_12sdp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/_20sdp"
                    android:paddingRight="@dimen/_20sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:text="@string/card_verification_code"
                        android:textSize="@dimen/_12sdp" />


                    <EditText
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:background="@android:color/white"
                        android:hint="@string/code"
                        android:inputType="number"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:gravity="center"
                        android:textSize="@dimen/_12sdp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".5"
                        android:gravity="center|left">

                        <ImageView
                            android:id="@+id/back"
                            android:layout_width="@dimen/_38sdp"
                            android:layout_height="@dimen/_38sdp"
                            android:layout_gravity="center|left"
                            android:layout_marginLeft="@dimen/_20sdp"
                            android:background="@drawable/auth_button_bg"
                            android:padding="@dimen/_9sdp"
                            android:src="@drawable/back_one" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".5"
                        android:gravity="center|right"
                        android:paddingRight="@dimen/_15sdp">

                        <Button
                            android:id="@+id/confirm"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_marginRight="@dimen/_10sdp"
                            android:background="@drawable/selected_price"
                            android:text="@string/confirm"
                            android:textColor="@android:color/white"
                            android:textAllCaps="false"
                            android:textSize="@dimen/_12sdp" />


                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </FrameLayout>
</layout>