<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.ui.login.ui.login">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/login_img"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_180sdp"
                    android:scaleType="fitXY"
                    android:src="@drawable/login" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_150sdp"
                    android:background="@drawable/login_corner_shadow" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_158sdp"
                    android:background="@drawable/auth_bg"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_40sdp"
                        android:text="@string/let_s_login"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:singleLine="true"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:drawableRight="@drawable/user"
                        android:hint="@string/username"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingRight="@dimen/_10sdp" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:singleLine="true"
                        android:drawableRight="@drawable/lock"
                        android:imeOptions="actionDone"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingRight="@dimen/_10sdp" />

                    <LinearLayout
                        android:id="@+id/forget_password"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="right"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/_16sdp"
                            android:layout_height="@dimen/_16sdp"
                            android:src="@drawable/forget_pass" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:text="@string/forget_password"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/auth"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:background="@drawable/auth_button_bg"
                        android:padding="@dimen/_18sdp"
                        android:src="@drawable/back" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".5"
                            android:gravity="center">

                            <Button
                                android:id="@+id/signup"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="@dimen/_15sdp"
                                android:layout_marginRight="@dimen/_15sdp"
                                android:background="@drawable/auth_button_two_bg"
                                android:text="@string/sign_up"
                                android:textAllCaps="false"
                                android:textSize="@dimen/_12sdp" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".5"
                            android:gravity="center|right"
                            android:paddingRight="@dimen/_15sdp">

                            <Button
                                android:id="@+id/explore"
                                android:layout_width="@dimen/_80sdp"
                                android:layout_height="match_parent"
                                android:background="@drawable/auth_button_third_bg"
                                android:text="@string/explore"
                                android:textAllCaps="false"
                                android:textSize="@dimen/_12sdp" />


                        </LinearLayout>
                    </LinearLayout>


                </LinearLayout>
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>

    </FrameLayout>
</layout>